# fighting-technology-game

./: CMakeLists.txt  README.md  atlas.cpp  atlas.h  icon.qrc  main.cpp  resources_manager.h  sound_manager.cpp  sound_manager.h  thread_pool.cpp
base_class/: animation.cpp  animation.h  atlas.cpp  atlas.h  rand_number.cpp  rand_number.h  resources_manager.cpp  resources_manager.h  sound_manager.cpp  sound_manager.h  thread_pool.cpp  thread_pool.h  timer.cpp  timer.h
box/: collision_box.cpp  collision_box.h  collision_manager.cpp  collision_manager.h
bullet/: bullet.cpp  bullet.h  bullet_boby_attack.cpp  bullet_boby_attack.h  bullet_boby_skill.cpp  bullet_boby_skill.h  bullet_manager.cpp  bullet_manager.h  bullet_queen_big.cpp  bullet_queen_big.h  bullet_queen_small.cpp  bullet_queen_small.h
floating_text/: floating_text.cpp  floating_text.h  floating_text_manager.cpp  floating_text_manager.h
interface/: game.cpp  game.h  game.ui  interface_manager.cpp  interface_manager.h  levels_1.cpp  levels_1.h  levels_2.cpp  levels_2.h  levels_3.cpp  levels_3.h  levels_4.cpp  levels_4.h  levels_base.cpp  levels_base.h  screen.cpp  screen.h  select.cpp  select.h  select.ui  select_venture.cpp  select_venture.h  select_venture.ui  start.cpp  start.h  start.ui  widget.cpp  widget.h
role/: character.cpp  character.h  character_manager.cpp  character_manager.h  enemy.cpp  enemy.h  enemy_baby.cpp  enemy_baby.h  enemy_jinbei.cpp  enemy_jinbei.h  enemy_pirate.cpp  enemy_pirate.h  enemy_queen.cpp  enemy_queen.h  player.cpp  player.h  player2_pirate.cpp  player2_pirate.h  player2_queen.cpp  player2_queen.h  player_baby.cpp  player_baby.h  player_jinbei.cpp  player_jinbei.h  player_pirate.cpp  player_pirate.h  player_queen.cpp  player_queen.h
role_state/: baby_player_state_machine.cpp  baby_player_state_machine.h  enemy_state_machine.cpp  enemy_state_machine.h  jinbei_player_state_machine.cpp  jinbei_player_state_machine.h  pirate_enemy_state_machine.cpp  pirate_enemy_state_machine.h  pirate_player_state_machine.cpp  queen_enemy_state_machine.cpp  queen_enemy_state_machine.h  queen_player_state_machine.cpp  queen_player_state_machine.h
state/: State_Node.h  enemy_attack_state.cpp  enemy_attack_state.h  enemy_dead_state.cpp  enemy_dead_state.h  enemy_fall_state.cpp  enemy_fall_state.h  enemy_idle_state.cpp  enemy_idle_state.h  enemy_jump_state.cpp  enemy_jump_state.h  enemy_pirate_state_machine.cpp  enemy_pirate_state_machine.h  enemy_queen_state_machine.cpp  enemy_queen_state_machine.h  enemy_run_state.cpp  enemy_run_state.h  enemy_skill_state.cpp  enemy_skill_state.h  pirate_player_state_machine.h  player2_pirate_state_machine.cpp  player2_pirate_state_machine.h  player2_queen_state_machine.cpp  player2_queen_state_machine.h  player_attack_state.cpp  player_attack_state.h  player_dead_state.cpp  player_dead_state.h  player_fall_state.cpp  player_fall_state.h  player_idle_state.cpp  player_idle_state.h  player_jump_state.cpp  player_jump_state.h  player_pirate_state_machine.cpp  player_pirate_state_machine.h  player_queen_state_machine.cpp  player_queen_state_machine.h  player_roll_state.cpp  player_roll_state.h  (+6 more)
